--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-first test
+Thanks for using my progams
+If you want to update your code, contact me now!
+My minecraft ID is xia_st, and my E-Mail is 694260526@qq.com and xia379278@gmail.com, I will reply you first, if your code can run normally and is non-malicious, I will update your code soon.
+		--by xia
