--- a/README
+++ b/README
@@ -1,4 +1,9 @@
 Thanks for using my programs!!!
-If you want to update your code, contact me now!
-My minecraft ID is xia_st, and my E-Mail is 694260526@qq.com and xia379278@gmail.com, I will reply you first, if your code can run normally and non-malicious, I will update your code soon.
+If you want to update your code, contact me 
+now!
+My minecraft ID is xia_st, and my E-Mail is 
+694260526@qq.com and xia379278@gmail.com, I 
+will reply you first, if your code can run 
+normally and non-malicious, I will update 
+your code soon.
 		--by xia
