--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 Thanks for using my programs!!!
-If you want to update your code, contact me 
-now!
-My minecraft ID is xia_st, and my E-Mail is 
-694260526@qq.com and xia379278@gmail.com, I 
-will reply you first, if your code can run 
-normally and non-malicious, I will update 
-your code soon.
-		--by xia
+If you have better codes, please contact me!
+My minecraft ID is xia_st, you could also
+send e-mails to me on 694260526@qq.com or
+xia379278@gmail.com, I will reply you as 
+soon as possible.And if your codes can run 
+normally and non-malicious, I'd like to 
+update your codes at onec.
+		--by xia 
