--- a/README
+++ b/README
@@ -5,5 +5,5 @@ send e-mails to me on 694260526@qq.com or
 xia379278@gmail.com, I will reply you as 
 soon as possible.And if your codes can run 
 normally and non-malicious, I'd like to 
-update your codes at onec.
+update your codes at once.
 		--by xia 
